Added geocoding by latitude and longitude from device and also ip address fallback to obtain current city data
