# backend/Models/DataModel.cs
@@ -2,6 +2,11 @@ using backend.Db;
 
 namespace backend.Models {
 
+  public class PeakDataElectricityCompany {
+    public required string Name { get; set; }
+    public required string Url { get; set; }
+  }
+
   public class PeakDataHourRange {
     public required int Start { get; set; }
     public required int End { get; set; }
@@ -18,6 +23,12 @@ namespace backend.Models {
   }
 
   public class DataModel {
-    public required IEnumerable<PeakDataDay> Data { get; set; }
+    public required IEnumerable<PeakDataDay> Days { get; set; }
+    public required string City { get; set; }
+    public required string State { get; set; }
+    public required string StateCode { get; set; }
+    public required string Country { get; set; }
+    public required string CountryCode { get; set; }
+    public required PeakDataElectricityCompany ElectricityCompany { get; set; }
   }
 }
